# Implicate-Morphogenic-Potentiality

./: README.md
.old/: research-2.py
ai/ai-2/: pyproject.toml
ai/ai-2/ai_2/: main.py
data/: 1-1-existance.tex  1-2 essence.tex  1-3 the phenomescape.tex  Celestial Spheres and The Collective Unconscious.txt  Eidolons; Ufology and the Second Axial Age.txt  Teilhard De Chardin The Omega Point and the Noosphere.txt  The Metamorphosis of Human Awareness.txt  a world of living mirrors.txt  interview.txt  is the universe alive.txt  morphogenetic universe.tex  notes.txt  self and other.txt  the destiny of fate.txt  thoughts.txt  time is accelerating.txt  transinformalizing humanity TOC.txt  what the universe wants.txt
drafts/: preliminaries.md  script-0.md
tex/: main.aux  main.out  main.tex
tex/notes/: biologically-driven-memetic-evolution.md  quantifying-abstractness.md
tex/parts/part-2-transinformalizing-humanity/1-the-architecture-of-experience/: 1-3-the-phenomenaescape.tex
tex/parts/part-2-transinformalizing-humanity/11-spirituality/: index.tex
tex/parts/part-2-transinformalizing-humanity/9-sexuality/: index.tex
