[tool.poetry]
name = "ai-2"
version = "0.1.0"
description = ""
authors = ["Jacob Valdez <jacobfv123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.11"
openai = "^1.37.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.31"
langchain-community = "^0.2.10"
langchain-experimental = "^0.0.63"
langchain-core = "^0.2.23"
psycopg = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
